Style transaction box to fix off center part

--- a/app/assets/stylesheets/transaction_box.scss
+++ b/app/assets/stylesheets/transaction_box.scss
@@ -56,10 +56,7 @@
   .available{
     width: 100%;
     text-align: center;
-    padding: 0 24px;
     margin-bottom: 12px;
-    margin-left: auto;
-    margin-right: auto;
     font-weight: 400;
   }
 
