--- a/app/assets/stylesheets/watchlist.scss
+++ b/app/assets/stylesheets/watchlist.scss
@@ -14,6 +14,10 @@
     margin: 24px;
     display: flex;
     justify-content: space-between;
+
+    span{
+      vertical-align:middle;
+    }
   }
 
   ul {
